fixed images blurry

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -9,7 +9,7 @@ html {
   
   /* Slideshow container */
   .slideshow-container {
-	max-width: 98%;
+	max-width: 99%;
 	position: relative;
 	margin: auto;
   }
